<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="server_addr">http://myrunsjf.appspot.com</string>
    <!--<string name="server_addr">http://10.31.254.119:8888</string>-->

    <string name="app_name">MyRuns</string>
    <string name="action_settings">Settings</string>

    <!-- Start Fragment -->
    <string-array name="inputArray">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="activityArray">
        <item>Standing</item>
        <item>Walking</item>
        <item>Running</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Hiking</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>

    <!-- Start Activity -->
    <string-array name="startArray">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heart Rate</item>
        <item>Comment</item>
    </string-array>

    <!-- Widget Fields -->
    <string name="profile_photo_text">Profile photo:</string>
    <string name="change_button">CHANGE</string>
    <string name="name_text">Name:</string>
    <string name="email_text">Email:</string>
    <string name="phone_text">Phone:</string>
    <string name="gender_text">Gender:</string>
    <string name="female_button">Female</string>
    <string name="male_button">Male</string>
    <string name="class_text">Class:</string>
    <string name="major_text">Major:</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">CANCEL</string>
    <string name="name_field">Your name</string>
    <string name="email_field">Your email</string>
    <string name="phone_field">Your phone</string>
    <string name="class_field">e.g., 2015</string>
    <string name="major_field">Your major here</string>

    <!-- ImageStuff -->

    <string name="profile_image_file_name">profile_image.png</string>
    <string name="dialog_fragment_tag_photo_picker">dialog_fragment_photo_picker</string>
    <string name="ui_profile_photo_picker_title">Select profile image</string>

    <string-array name="ui_profile_photo_picker_items">
        <item>Take picture from camera</item>
        <item>Select from gallery</item>
    </string-array>

    <!-- SharedPreferences -->

    <string name="preference_name">my_shared_preferences</string>
    <string name="preference_key_profile_email">profile_email</string>
    <string name="preference_key_profile_gender">profile_gender</string>
    <string name="preference_key_profile_name">profile_name</string>
    <string name="preference_key_profile_phone">profile_phone</string>
    <string name="preference_key_profile_class_year">profile_class_year</string>
    <string name="preference_key_profile_major">profile_major</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="input">Input Type:</string>
    <string name="activityType">Activity Type:</string>
    <string name="startButton">Start</string>
    <string name="syncButton">Sync</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="dateButton">Date</string>
    <string name="timeButton">Time</string>
    <string name="durationButton">Duration</string>
    <string name="distanceButton">Distance</string>
    <string name="caloriesButton">Calories</string>
    <string name="heartRateButton">Heart Rate</string>
    <string name="commentButton">Comment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="summary_privacy_setting">Posting your records anonymously</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="user_profile_preferences">User Profile</string>
    <string name="summary_user_profile_preferences">Names, Email, Class, etc</string>
    <string name="additional_preferences">Additional settings</string>
    <string name="title_unit_preferences">Unit Preference</string>
    <string name="summary_unit_preference">Select the units in which you would like to see distance values</string>
    <string name="dialog_title_unit_preference">Unit Preference</string>
    <string name="title_comment_preference">Comment</string>
    <string name="summary_comment_preference">Any suggestion to this course?</string>
    <string name="dialog_title_comment_preference">Comment</string>
    <string name="misc_preferences">Misc.</string>
    <string name="homepage_preference">Class homepage</string>
    <string name="summary_homepage_preference">http://www.cs.dartmouth.edu/~campbell</string>
    <string name="ui_profile_toast_save_text">Saved!</string>
    <string name="ui_profile_toast_cancel_text">Cancelled!</string>
    <string name="hint_comment">How did it go? Enter notes here.</string>
    <string name="text_comment">Comment</string>
    <string name="dialog_fragment_tag_edittext">EditText</string>
    <string name="ui_duration_title">Duration (minutes):</string>
    <string name="dialog_fragment_positive_button">Ok</string>
    <string name="dialog_fragment_negative_button">Cancel</string>
    <string name="ui_distance_title">Distance (Miles)</string>
    <string name="ui_calories_title">Calories</string>
    <string name="ui_heartrate_title">Heart Rate (BPM)</string>
    <string name="ui_comment_title">Comment:</string>
    <string name="title_activity_edit_text_alert_fragments">EditTextAlertFragments</string>
    <string name="start_activity_index">startActivityIndex</string>
    <string name="title_activity_date_picker_dialog_fragments">DatePickerDialogFragment</string>
    <string name="dialog_fragment_tag_date">DateDialogFragment</string>
    <string name="dialog_fragment_tag_time">TimeDialogFragment</string>
    <string name="title_activity_manual_input">ManualInputActivity</string>
    <string name="title_activity_display_map">DisplayMapActivity</string>
    <string name="ui_start_cancel_button">Entry deleted</string>
    <string name="title_activity_display_entry">DisplayEntryActivity</string>
    <string name="date_time">Date and Time</string>
    <string name="delete_entry_button">Delete</string>
    <string name="duration_text_view">Duration</string>
    <string name="distance_text_view">Distance</string>
    <string name="title_activity_map_display">Map</string>
    <string name="notification_title">MyRuns</string>
    <string name="notification_text">Recording your path now</string>
    <string name="title_activity_post">Post</string>

</resources>
