<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.dartmouth.cs.myrunsjf.DisplayEntryActivity">

    <TextView
        android:text="@string/activityType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/activity_type_text_view"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:text="@string/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/date_time_text_view"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:text="@string/duration_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/duration_text_view"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />


    <TextView
        android:text="@string/distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/distance_text_view"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:paddingLeft="@dimen/activity_horizontal_margin" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

</LinearLayout>
